# webicles

./: .gitignore  Cargo.toml  index.html  index.js
src/: lib.rs
src/gl/: mod.rs
src/linalg/: mod.rs
src/simulations/: mod.rs
src/simulations/gpu_mls_mpm/: draw_frag.glsl  mod.rs
src/simulations/rust_mls_mpm/: draw_vert.glsl  mod.rs
src/simulations/rust_mls_mpm_2/: draw_frag.glsl  draw_vert.glsl  mod.rs
src/simulations/static_particles/: draw_frag.glsl  draw_vert.glsl  mod.rs  update_frag.glsl  update_vert.glsl
src/simulations/triangle/: frag.glsl  mod.rs
