[package]
name = "webgl"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2.3", features = ["js"] }
glam = "0.20.1"
js-sys = "0.3.55"
rand = { version = "0.8.4" }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'Window',
]
